[tool.poetry]
name = "pycentroid"
version = "1.1.1"
description = "@centroid framework for python"
authors = ["Kyriakos Barbounakis <k.barbounakis@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pycentroid" }
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
asyncio = "^3.4.3"
dill = "^0.3.6"
requests = "2.31.0"
python-dateutil = "^2.8.2"
requests-async = "^0.6.2"
pydash = "^7.0.0"
typing-extensions = "^4.5.0"
inflect = "^7.0.0"
sqlglot = "^18.10.1"
urllib3 = "2.0.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[pytest]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

